--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -46,7 +46,7 @@
        {% endfor %}
     </div>
      <div class="full">
-        {% for project in project_list|slice:"6:" %}
+        {% for project in project_list|slice:"6:8" %}
             <article class="project box sixth" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -63,6 +63,15 @@
                 <p><a href="#" class="tease">Read More</a></p>
            </div>
         </article>
+        {% for project in project_list|slice:"8:" %}
+            <article class="project box sixth" id="{{ project.slug }}">
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+            </article>
+        {% endfor %}
     </div>
 {% endblock content %}
 {% block js_local %}
