--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -159,6 +159,10 @@ body > footer > .contact {
     width:50%; float:left;
 }
 
+.two-thirds {
+    width:66.66667%; float:left;
+}
+
 .full {
     width:100%;
 }
