editing detail page

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -31,7 +31,7 @@
         </article>
     </div>
     <div class="third">
-        <article class="text box third" id="news">
+        <article class="text box full" id="news">
            <div>
                 <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
                 <h2>{{ item.title }}</h2>
