editing detail page

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -77,7 +77,7 @@
 {% block js_local %}
     <script type="text/javascript">
         function Flex() {
-            var height = $("article.project").width();
+            var height = $("article.project.third").width();
             $("article.text > div").css('min-height', height);
         }
         $(document).ready(function() {
