editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -67,6 +67,7 @@ body {
         font-weight:normal;
         font-size:87.5%;
         font-family: kulturista-web-1,kulturista-web-2, Arial, Helvetica, sans-serif;
+        color:#444;
     }
 
 h1 {
