--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -75,7 +75,7 @@ h1 {
     padding:0;
     font-size: 1.5em;        /* 24px / 16px = 1.5em */
     font-weight:normal;
-    font-family: purista-web-1,purista-web-2;
+    font-family: purista-web-1,purista-web-2, sans-serif;
     /*text-transform: uppercase;*/
 }
 
