edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -205,12 +205,7 @@ body > footer > .contact {
 }
 
 #home article#profile {
-    float:left;
-    background:url('images/corner-bg-top-right.png') no-repeat right top,
-               url('images/vertical-bg.png') no-repeat 10px 90%,
-               url('images/vertical-bg.png') no-repeat 10px top,
-               url('images/bottom-bg.png') no-repeat left 10px,
-               url('images/corner-bg-bottom-right.png') no-repeat right bottom;
+    background:url('images/corner-bg-top-right.png') no-repeat right top;
 }
 
 #home article.text h1 {
