--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -205,6 +205,7 @@ body > footer > .contact {
 }
 
 #home article#profile {
+    float:left;
     background:url('images/corner-bg-top-right.png') no-repeat right top;
 }
 
