editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -598,6 +598,10 @@ body > footer > .contact {
 
 .max .details .description {
     width:50%;
+    -webkit-column-count:2;
+    -moz-column-count:2;
+    -o-column-count:2;
+    -ms-column-count:2;
     column-count:2;
 }
 
