--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -610,7 +610,14 @@ body > footer > .contact {
 }
 
 .max .details .meta .info-boxes {
-    position:relative;
+    top:0;
+    right:0;
+    width:33.33333%;
+}
+
+.max .details .meta .categories,
+.max .details .meta .people,{
+    width:66.66667%;
 }
 
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
