editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -594,6 +594,7 @@ body > footer > .contact {
 .max .details {
     width:100%;
     background: none;
+    position:relative;
 }
 
 .max .details .description {
