--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -619,6 +619,7 @@ body > footer > .contact {
 .max .details .meta .categories,
 .max .details .meta .people,{
     width:66.66667%;
+    float:left;
 }
 
 @media screen and (max-width: 1240px) and (min-width: 1120px) {
