--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -119,12 +119,20 @@ body > header > h1 a {
 body > header > nav {
     float:right;
     width:480px;
-    font-family: purista-web-1,purista-web-2, sans-serif;
 }
 
 body > header > nav li {
     display:inline;
     line-height:80px;
+    width:180px;
+    text-align: center;
+}
+
+body > header > nav li a {
+    font-family: purista-web-1,purista-web-2, sans-serif;
+    text-transform:uppercase;
+    font-weight:bold;
+    font-size: 1.28571em;
 }
 
 body > .content {
