--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -59,8 +59,8 @@
         <nav>
             <ul>
                 <li><a href="{% url portfolio_project_list %}">Portfolio</a></li>
-                <li>Studio</li>
-                <li>Blog</li>
+                <li><a href="#">Studio</a></li>
+                <li><a href="#">Blog</a></li>
             </ul>
         </nav>
     </header>
