--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -60,7 +60,7 @@
             <ul>
                 <li><a href="{% url portfolio_project_list %}">Portfolio</a></li>
                 <li><a href="#">Studio</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Research</a></li>
             </ul>
         </nav>
     </header>
