editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -103,6 +103,7 @@ body > header {
 
 body > header > h1 {
     font-size:8px;
+    width:50%;
 }
 
 body > header > h1 a {
@@ -118,7 +119,7 @@ body > header > h1 a {
 
 body > header > nav {
     float:left;
-    width:480px;
+    width:50%;
 }
 
 body > header > nav li {
@@ -132,7 +133,7 @@ body > header > nav li a {
     text-transform:uppercase;
     font-weight:bold;
     font-size: 1.28571em;
-    width:180px;
+    width:33.33333%;
     text-decoration:none;
 }
 
