--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -119,6 +119,7 @@ body > header > h1 a {
 body > header > nav {
     float:left;
     width:50%;
+    background: #ccc;
 }
 
 body > header > nav li {
