--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -124,7 +124,7 @@ body > header > nav {
 }
 
 body > header > nav li {
-    display:inline;
+    float:left;
     line-height:80px;
     text-align: center;
     width:33.33333%;
