--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -114,6 +114,7 @@ body > header > h1 a {
     padding:80px 0 0 0px;
     height:0;
     font-size:8px;
+    display:block;
     background: url('images/logo.png')
 }
 
