--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -237,7 +237,7 @@ body > footer > .contact {
 
 #home article.text h1 {
     line-height:1em;
-    margin-bottom:10px;
+    /*margin-bottom:10px;*/
     text-transform: uppercase;
 }
 
