--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -229,6 +229,7 @@ body > footer > .contact {
 #home article#profile {
     float:left;
     background:url('images/corner-bg-top-right.png') no-repeat right top;
+    padding-right:10px;
 }
 
 #home article.text h1 {
