--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -251,6 +251,10 @@ body > footer > .contact {
     padding: 0 10px;
 }
 
+#home article#news h1 {
+    margin-top:10px;
+}
+
 #home article#news .date {
     font-weight:bold;
     color:rgba(255,255,255,0.5);
