editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -252,7 +252,7 @@ body > footer > .contact {
 }
 
 #home article#news h1 {
-    margin-top:10px;
+    padding-top:10px;
 }
 
 #home article#news .date {
