--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -57,8 +57,9 @@
                 {%  endfor %}
             </article>
         {% endfor %}
+        <div class="third">
         {% for project in project_list|slice:"5:7" %}
-           <article class="project box third" id="{{ project.slug }}">
+           <article class="project box full" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
@@ -68,6 +69,7 @@
                {%  endfor %}
            </article>
        {% endfor %}
+        </div>
     </div>
 {% endblock content %}
 {% block js_local %}
