--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -3,7 +3,7 @@
 {% block content_header %}
 <header>
 {% block content_title %}
-    <h1>All Projects</h1>
+    <h1 class="full">All Projects</h1>
 {% endblock content_title %}
 </header>
 {% endblock content_header %}
