--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -377,6 +377,7 @@ body > footer > .contact {
 
 .slideshow .controls img {
     width:100%;
+    display:block;
     /*border: 1px solid #fff;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
