--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -484,6 +484,7 @@ body > footer > .contact {
 
 .details .info-boxes ul li span {
     display:block;
+    font-family: purista-web-1,purista-web-2, sans-serif;
 }
 
 .details .date .year,
