--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -445,7 +445,8 @@ body > footer > .contact {
 
 .details h1 {
     padding-top:10px;
-    font-size:2.14285714em;
+    font-size:2em;
+    line-height: 1.2em;
 }
 
 .details ul, .details p {
