editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -568,8 +568,8 @@ body > footer > .contact {
     margin:0 0 0 0;
 }
 
-.details .meta .people h2 {
-    font-size:1em;
+.details .meta h2 {
+    font-size:1.14285714em;
 }
 
 
