--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -80,7 +80,7 @@
                     {% if project.external_url %}
                     <div class="link box">
                         <h2>Web Link</h2>
-                        <p class="url"><a href="{{ project.external_url }}">{{ project.external_url }}</a></p>
+                        <p class="url">{{ project.external_url|urlizetrunc:20 }}</p>
                     </div>
                     {% endif %}
                     {% if project.tags.all %}
