--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -494,6 +494,7 @@ body > footer > .contact {
 .details .info-boxes ul li span {
     display:block;
     font-family: Helvetica, Arial, sans-serif;
+    line-height:1em;
 }
 
 .details .date .year,
