--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -41,7 +41,8 @@
         {% endfor %}
         <article class="text box two-thirds" id="news">
            <div>
-                <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
+                <h1>News</h1>
+                <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
                 <h2>{{ item.title }}</h2>
                 {{ item.excerpt|truncatewords:20 }}
                 <p><a href="#" class="tease">Read More</a></p>
