working on studio section of site

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -44,7 +44,7 @@
                 <h1>News</h1>
                 <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
                 <h2>{{ item.title }}</h2>
-                {{ item.excerpt|truncatewords:20 }}
+                {{ item.excerpt_html|truncatewords_html:20 }}
                 <p><a href="#" class="tease">Read More</a></p>
            </div>
         </article>
