--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -266,8 +266,8 @@ body > footer > .contact {
 
 #home article#news h1 {
     position:absolute;
-    bottom:0;
-    right:0;
+    bottom:-10px;
+    right:-10px;
     z-index:0;
     color:rgba(255,255,255,0.1);
     font-size:7em;
