--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -289,7 +289,7 @@ body > footer > .contact {
     clear:both;
     font-weight:normal;
     font-size:1.2857em;
-    margin-bottom:5px 0;
+    margin:5px 0;
 }
 
 #home article.project img {
