--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -24,6 +24,7 @@
             </article>
         {% endfor %}
         <article class="text box full" id="profile">
+                <h1>Studio</h1>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <a href="#" class="tease">Read More</a>
         </article>
