--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -238,8 +238,8 @@ body > footer > .contact {
 
 #home article#profile h1 {
     position:absolute;
-    bottom:0px;
-    right:0px;
+    bottom:0;
+    right:0;
     z-index:0;
     color:rgba(0,0,0,0.1);
     font-size:7em;
@@ -251,6 +251,7 @@ body > footer > .contact {
 #home article#profile h2 {
     font-size:1.71428em;
     text-transform: uppercase;
+    padding-bottom:10px;
 }
 
 #home article.text h1 {
@@ -287,8 +288,8 @@ body > footer > .contact {
 
 #home article#news h1 {
     position:absolute;
-    bottom:0px;
-    right:0px;
+    bottom:0;
+    right:0;
     z-index:0;
     color:rgba(255,255,255,0.1);
     font-size:7em;
