working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -513,8 +513,8 @@ body > footer > .contact {
 .details .info-boxes {
     /*position:absolute;
     bottom:0;
-    right:0;*/
-    width:16.66667%;
+    right:0;
+    width:16.66667%;*/
 }
 
 .details .info-boxes ul {
