--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -239,7 +239,7 @@ body > footer > .contact {
 #home article#profile h1 {
     position:absolute;
     bottom:0;
-    right:0;
+    right:10px;
     z-index:0;
     color:rgba(0,0,0,0.1);
     font-size:7em;
@@ -288,8 +288,8 @@ body > footer > .contact {
 
 #home article#news h1 {
     position:absolute;
-    bottom:10px;
-    right:10px;
+    bottom:0;
+    right:0;
     z-index:0;
     color:rgba(255,255,255,0.1);
     font-size:7em;
@@ -529,6 +529,7 @@ body > footer > .contact {
     width:50%;
     display: table;
 }
+
 
 .details .info-boxes ul li p {
     background: #ccc;
