--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -15,6 +15,7 @@
         {% endfor %}
         {% for project in project_list|slice:"1:3" %}
             <article class="project box third" id="{{ project.slug }}">
+                <h1>{{ project.title }}</h1>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
