--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -5,7 +5,7 @@
      <div class="half">
        {% for project in project_list|slice:"0:1" %}
             <article class="project box two-thirds featured" id="{{ project.slug }}">
-                <h1>{{ project.title }}</h1>
+                <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -16,7 +16,7 @@
         {% endfor %}
         {% for project in project_list|slice:"1:3" %}
             <article class="project box third" id="{{ project.slug }}">
-                <h1>{{ project.title }}</h1>
+                <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -34,7 +34,7 @@
     <div class="half">
          {% for project in project_list|slice:"3:4" %}
             <article class="project box third" id="{{ project.slug }}">
-                <h1>{{ project.title }}</h1>
+                <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -54,7 +54,7 @@
         </article>
         {% for project in project_list|slice:"4:5" %}
             <article class="project box two-thirds featured" id="{{ project.slug }}">
-                <h1>{{ project.title }}</h1>
+                <h1>{{ project.name }}</h1>
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -65,7 +65,7 @@
         {% endfor %}
         {% for project in project_list|slice:"5:7" %}
            <article class="project box third" id="{{ project.slug }}">
-                <h1>{{ project.title }}</h1>
+                <h1>{{ project.name }}</h1>
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
