--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -266,10 +266,10 @@ body > footer > .contact {
 
 #home article.project h1 {
     position:absolute;
-    bottom:0;
-    right:0;
+    bottom:10px;
+    right:10px;
     z-index:10;
-    color:rgba(0,0,0,0.1);
+    color:rgba(255,255,255,0.5);
     line-height:1em;
     margin: 0;
     padding: 0;
