--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -267,9 +267,9 @@ body > footer > .contact {
 #home article.project h1 {
     position:absolute;
     bottom:10px;
-    right:10px;
+    left:10px;
     z-index:10;
-    color:rgba(255,255,255,0.5);
+    color:rgba(255,255,255,0.3);
     line-height:1em;
     margin: 0;
     padding: 0;
