--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -304,7 +304,7 @@ body > footer > .contact {
 
 #home article#news h1 {
     position:absolute;
-    bottom:0;
+    top:0;
     right:0;
     z-index:0;
     color:rgba(255,255,255,0.1);
