working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -266,7 +266,7 @@ body > footer > .contact {
 
 #home article.project h1 {
     position:absolute;
-    bottom:10px;
+    top:10px;
     left:10px;
     z-index:10;
     color:rgba(255,255,255,0.3);
@@ -304,7 +304,7 @@ body > footer > .contact {
 
 #home article#news h1 {
     position:absolute;
-    top:0;
+    bottom:0;
     right:0;
     z-index:0;
     color:rgba(255,255,255,0.1);
