--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -267,13 +267,14 @@ body > footer > .contact {
 #home article.project h1 {
     display:none;
     position:absolute;
-    top:10px;
-    left:10px;
+    top:0;
+    left:0;
     width:100%;
     height:100%;
+    margin: 10px;
     z-index:10;
     background:rgba(0,0,0,0.5);
-    color:rgba(255,255,255,1.0);
+    color:rgba(255,255,255,0.8);
     line-height:1em;
     margin: 0;
     padding: 0;
