--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -466,16 +466,30 @@ body > footer > .contact {
     filter:alpha(opacity=100); /* For IE8 and earlier */
 }
 
-.slideshow .zoom {
+.slideshow nav.expand {
     position:absolute;
-    width:33%;
-    left:33%;
-    top:50%;
+    width:42.85714%;
+    left:42.85714%;
+    height:100%;
+    background: transparent;
     z-index:3000;
-    text-align: center;
+}
+
+.slideshow nav.expand a {
+    width:100%;
+    height:100%;
+    background: transparent;
+}
+
+.slideshow nav.expand a span {
+    position:absolute;
+    display:block;
+    top:50%;
+    width:33%;
+    margin: 0 33%;
+    background:rgba(0,0,0,0.5);
+    color:#fff;
     font-size:8em;
-    text-decoration: none;
-    color:rgba(255,255,255,0.5);
 }
 
 .slideshow #close {
@@ -488,20 +502,19 @@ body > footer > .contact {
 
 .slideshow .flex-direction-nav a {
     position:absolute;
-    top:50%;
-    width:33%;
+    width:28.5714286%;
     z-index:1000;
 }
 
 
 
 .slideshow .flex-direction-nav .next {
-    right:2.5%;
+    right:10px;
     text-align: right;
 }
 
 .slideshow .flex-direction-nav .prev {
-    left:2.5%;
+    left:10px;
 }
 
 /* details */
