--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -476,6 +476,7 @@ body > footer > .contact {
 }
 
 .slideshow nav.expand a {
+    position:relative;
     width:100%;
     height:100%;
     background: transparent;
