--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -477,6 +477,7 @@ body > footer > .contact {
 
 .slideshow nav.expand a {
     position:relative;
+    display:block;
     width:100%;
     height:100%;
     background: transparent;
