--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -481,6 +481,7 @@ body > footer > .contact {
     width:100%;
     height:100%;
     background: transparent;
+    text-align:center;
 }
 
 .slideshow nav.expand a span {
@@ -503,7 +504,8 @@ body > footer > .contact {
 
 .slideshow .flex-direction-nav a {
     position:absolute;
-    width:28.5714286%;
+    display:none;
+    /*width:28.5714286%;*/
     z-index:1000;
 }
 
