--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -477,20 +477,17 @@ body > footer > .contact {
 
 .slideshow nav.expand a {
     position:relative;
-    display:none;
+    display:block;
     width:100%;
     height:100%;
     background: transparent;
     text-align:center;
 }
 
-.slideshow nav.expand a:hover {
-    display:block;
-}
 
 .slideshow nav.expand a span {
     position:absolute;
-    display:block;
+    display:none;
     top:50%;
     width:33%;
     margin: 0 33%;
@@ -498,6 +495,11 @@ body > footer > .contact {
     color:#fff;
     font-size:8em;
 }
+
+.slideshow nav.expand a:hover span {
+   display:block;
+}
+
 
 .slideshow #close {
     display:none;
