--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -7,8 +7,8 @@
         <section class="slideshow">
             <div class="carousel">
                 <nav class="expand">
-                    <a id="open" href="#zoomin" title="maximize slideshow"><span class="box">+</span></a>
-                    <a id="close" href="#zoomout" title="minimize slideshow"><span class="box">-</span></a>
+                    <a id="open" href="#zoomin" title="maximize slideshow"><span class="square">+</span></a>
+                    <a id="close" href="#zoomout" title="minimize slideshow"><span class="square">-</span></a>
                 </nav>
                 <ul class="slides">
                 {% for image in project.projectimage_set.all %}
