--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -492,6 +492,7 @@ body > footer > .contact {
     top:50%;
     width:33%;
     margin: 0 33%;
+    background: rgba(0,0,0,0.5);
     color:#fff;
     font-size:8em;
     -webkit-transition: all .5s ease-in;
