working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -497,9 +497,9 @@ body > footer > .contact {
     top:50%;
     width:33%;
     margin: 0 33%;
-    background: rgba(0,0,0,0.5);
     color:#fff;
     font-size:8em;
+    text-shadow: 1px 1px 1px #000;
     -webkit-transition: all .5s ease-in;
     -moz-transition: all .5s ease-in;
     -o-transition: all .5s ease-in;
