working on studio section of site

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -498,7 +498,7 @@ body > footer > .contact {
     width:33%;
     margin: 0 33%;
     font-size:8em;
-    color:#2f811b;
+    color:#fff;
     -webkit-transition: all .5s ease-in;
     -moz-transition: all .5s ease-in;
     -o-transition: all .5s ease-in;
