working on studio section of site

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -58,7 +58,7 @@
         <h1><a href="{% url home %}">Future Green Studio</a></h1>
         <nav>
             <ul>
-                <li><a href="#">Studio</a></li>
+                <li><a href="{% url studio %}">Studio</a></li>
                 <li><a href="{% url portfolio_project_list %}">Portfolio</a></li>
                 <li><a href="#">Research</a></li>
             </ul>
