working on studio section of site

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -1,4 +1,5 @@
 {% extends "studio_base.html" %}
+{% load generic_flatblocks %}
 <article class="text box full" id="profile">
     <h1>Studio</h1>
     {%  gblock "firm_profile" for "content.ContentBlock" %}
